--- a/.github/workflows/deploy_pages.yml
+++ b/.github/workflows/deploy_pages.yml
@@ -32,6 +32,7 @@ jobs:
 
       - name: Generate tailwind
         run: |
+          npm install
           npm run build
 
       - name: Setup Pages
