--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "npx tailwindcss -i ./assets/css/index.css -o ./dist/index.css",
+    "build": "npx tailwindcss -i ./assets/css/index.css -o ./dist/index.css; cp src/index.html ./dist",
     "watch": "npm run build; npx tailwindcss -i ./assets/css/index.css -o ./dist/index.css --watch"
   },
   "repository": {
