--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "npx tailwindcss -i ./assets/css/index.css -o ./dist/css/index.css; cp src/index.html ./dist",
-    "watch": "npm run build; npx tailwindcss -i ./assets/css/index.css -o ./dist/index.css --watch"
+    "watch-css": "npx tailwindcss -i ./assets/css/index.css -o ./dist/css/index.css --watch",
+    "watch-html": "npx copy-and-watch --watch src/**/*.html dist/",
+    "dev": "npx serve dist/ & npm run watch-css & npm run watch-html"
   },
   "repository": {
     "type": "git",
@@ -19,6 +21,8 @@
   },
   "homepage": "https://github.com/cds-snc/notification-system-status-frontend#readme",
   "devDependencies": {
+    "copy-and-watch": "^0.1.6",
+    "serve": "^14.2.1",
     "tailwindcss": "^3.3.6"
   }
 }
