--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "npx tailwindcss -i ./assets/css/index.css -o ./dist/css/index.css; cp src/index.html ./dist",
-    "watch-css": "npx tailwindcss -i ./assets/css/index.css -o ./dist/css/index.css --watch",
-    "watch-html": "npx copy-and-watch --watch src/**/*.html dist/",
+    "build": "npx tailwindcss -i ./src/css/index.css -o ./dist/css/index.css; cp ./src/index.html ./dist",
+    "watch-css": "npx tailwindcss -i ./src/css/index.css -o ./dist/css/index.css --watch",
+    "watch-html": "npx copy-and-watch --watch src/**/*.html dist/ & npx copy-and-watch --watch src/js/*.js dist/js",
     "dev": "npx serve dist/ & npm run watch-css & npm run watch-html"
   },
   "repository": {
