--- a/.github/workflows/upload_to_s3.yml
+++ b/.github/workflows/upload_to_s3.yml
@@ -45,8 +45,7 @@ jobs:
 
     - name: Upload to S3 bucket
       run: |
-        aws s3 sync . s3://${{ secrets.STAGING_SYSTEM_STATUS_BUCKET }}/. --include='${{ github.repository }}/src/*'
-
+        aws s3 sync ./src/* s3://${{ secrets.STAGING_SYSTEM_STATUS_BUCKET }}
     # - name: Notify Slack channel if this job failed
     #   if: ${{ failure() }}
     #   run: |
