fix(ci): install npm packages

--- a/.github/workflows/cypress_tests.yml
+++ b/.github/workflows/cypress_tests.yml
@@ -29,6 +29,7 @@ jobs:
 
       - name: run the app
         run: |
+          npm install
           npm run dev 
 
       - name: Run the cypress tests
