--- a/.github/workflows/cypress_tests.yml
+++ b/.github/workflows/cypress_tests.yml
@@ -27,10 +27,13 @@ jobs:
         with:
           node-version: '16.x'
 
-      - name: run the app
+      - name: install deps
         run: |
           npm install
-          npm run dev 
+
+      - name: run the app
+        run: |
+          npm run dev &
 
       - name: Run the cypress tests
         uses: cypress-io/github-action@d79d2d530a66e641eb4a5f227e13bc985c60b964 # v4.2.2
@@ -38,7 +41,7 @@ jobs:
           CYPRESS_BASE_URL: ${{needs.deploy-test-admin.outputs.LAMBDA_URL}}
         with:
           record: false
-          config: "video=false,screenshotOnRunFailure=false"
+          config: video=false,screenshotOnRunFailure=false
           build: npx cypress info
           working-directory: tests_cypress
           spec: |
