--- a/.github/workflows/cypress_tests.yml
+++ b/.github/workflows/cypress_tests.yml
@@ -17,15 +17,11 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - env: 
-          CYPRESS_BASE_URL: http://localhost:3000
-        run: echo HEY "$CYPRESS_BASE_URL"
-
       - name: checkout
         uses: actions/checkout@3df4ab11eba7bda6032a0b82a6bb43b11571feac # v4.0.0
       - uses: actions/setup-node@e33196f7422957bea03ed53f6fbb155025ffc7b8 # v3.7.0
         with:
-          node-version: '16.x'
+          node-version: 16.x
 
       - name: install deps
         run: |
@@ -38,11 +34,11 @@ jobs:
       - name: Run the cypress tests
         uses: cypress-io/github-action@d79d2d530a66e641eb4a5f227e13bc985c60b964 # v4.2.2
         env:
-          CYPRESS_BASE_URL: ${{needs.deploy-test-admin.outputs.LAMBDA_URL}}
+          CYPRESS_BASE_URL: http://localhost:3000
         with:
           record: false
           config: video=false,screenshotOnRunFailure=false
           build: npx cypress info
-          working-directory: tests_cypress
+          working-directory: cypress
           spec: |
             cypress/e2e/frontend.cy.js
