--- a/.github/workflows/upload_to_s3.yml
+++ b/.github/workflows/upload_to_s3.yml
@@ -33,7 +33,7 @@ jobs:
         npm install
         npm run build
         pwd
-        mv ./dist/css/index.css src/index.css
+        mv ./dist/css/index.css src/css/index.css
 
     # Staging upload
     - name: Configure AWS credentials
