--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "npx tailwindcss -i ./src/css/index.css -o ./dist/css/index.css; cp ./src/index.html ./dist; mkdir -p ./dist/js && cp ./src/js/* ./dist/js",
+    "build": "npx tailwindcss -i ./src/css/index.css -o ./dist/css/index.css; cp ./src/index.html ./dist; mkdir -p ./dist/js && cp ./src/js/* ./dist/js; mkdir -p ./dist/assets && cp ./src/assets/* ./dist/assets",
     "watch-css": "npx tailwindcss -i ./src/css/index.css -o ./dist/css/index.css --watch",
     "watch-html": "npx copy-and-watch --watch src/**/*.html dist/ & npx copy-and-watch --watch src/js/*.js dist/js",
     "dev": "npx serve dist/ & npm run watch-css & npm run watch-html",
@@ -25,6 +25,6 @@
     "copy-and-watch": "^0.1.6",
     "prettier": "3.1.1",
     "serve": "^14.2.1",
-    "tailwindcss": "^3.3.6"
+    "tailwindcss": "^3.4.0"
   }
 }
