--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
   "devDependencies": {
     "copy-and-watch": "^0.1.6",
     "cypress": "^13.6.2",
+    "cypress-axe": "^1.5.0",
+    "cypress-html-validate": "^6.1.0",
+    "html-validate": "^8.9.0",
     "prettier": "3.1.1",
     "serve": "^14.2.1",
     "tailwindcss": "^3.4.0"
