--- a/.github/workflows/prod_upload_to_s3.yml
+++ b/.github/workflows/prod_upload_to_s3.yml
@@ -26,11 +26,6 @@ jobs:
         with:
           node-version: "14"
 
-      - name: Generate Tailwind CSS file
-        run: |
-          npm install
-          npm run build
-
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
@@ -46,6 +41,12 @@ jobs:
         shell: bash
         run: |
           echo "BUCKET_TAG=$(aws s3api get-bucket-tagging --bucket ${{ secrets.PRODUCTION_SYSTEM_STATUS_BUCKET }} --query TagSet[?Key == 'Version'].Value | [0])" >> $GITHUB_ENV
+
+      - name: Generate Tailwind CSS file
+        if: latest-tag.outputs.tag != ${{ env.BUCKET_TAG }}
+        run: |
+          npm install
+          npm run build
 
       - name: Upload to S3 bucket
         if: latest-tag.outputs.tag != ${{ env.BUCKET_TAG }}
