--- a/.github/workflows/prod_upload_to_s3.yml
+++ b/.github/workflows/prod_upload_to_s3.yml
@@ -42,6 +42,12 @@ jobs:
         run: |
           echo "BUCKET_TAG=$(aws s3api get-bucket-tagging --bucket ${{ secrets.PRODUCTION_SYSTEM_STATUS_BUCKET }} --query TagSet[?Key == 'Version'].Value | [0])" >> $GITHUB_ENV
 
+      - name: Seed S3 bucket tag
+        if: ${{ BUCKET_TAG }} == "" or ${{ BUCKET_TAG }} == "[]"
+        shell: bash
+        run: |
+          aws s3api get-bucket-tagging --bucket ${{ secrets.PRODUCTION_SYSTEM_STATUS_BUCKET }} --tagging 'TagSet=[{Key=Version, Value=v1.0.0}]'
+
       - name: Generate Tailwind CSS file
         if: latest-tag.outputs.tag != ${{ env.BUCKET_TAG }}
         run: |
